navbar was acting funny, ctrl+shift+r fixed it

--- a/koodivarasto/static/styles/main.css
+++ b/koodivarasto/static/styles/main.css
@@ -2,23 +2,27 @@
     background-color: rgb(170, 240, 179);
 }
 
-.container-fluid{color: blueviolet;}
+.container-fluid{
+  color: blueviolet;
+}
+
 
 .dropdown {
-    padding-top:8px;
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
+  padding:8px;
+  display: inline-block;
+}
+
+.dropdown-content {
+    display:none;
+    position:absolute;
     background-color: #212529;
-    min-width: 140px;
+    min-width: 120px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
+    padding: 10px 10px;
     z-index: 1;
   }
   
   .dropdown:hover .dropdown-content {
     display: block;
   }
+
